--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;1,300;1,400;1,500&display=swap");
+@import "github-syntax-dark/lib/github-dark.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
